<resources>
    <string name="app_name">Together</string>

    <string name="logo_content_description">Logo</string>

    <string name="parse_app_id">1sUJ1KGduHKEqY2M1NmxksHn4zdXYV8bCJz2u883</string>
    <string name="parse_client_key">9Ox0ulDm1zqbTg4g18vVBM73M8K824S0bLKoGxpE</string>

    <string name="facebook_app_id">900317036696901</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Create Your Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="message_hint">type here...</string>
    <string name="send">Send</string>

    <string name="uName">Your Username</string>
    <string name="uPass">Your Password</string>
    <string name="loginBtn">Login</string>
    <string name="forgetPass">Forget Password?</string>
    <string name="newUser">No Account? Create One!</string>
    <string name="register">Register</string>

    <!--For Signup Page Fields & Others If Needed-->
    <string name="enter_full_name">Your Full Name</string>
    <string name="create_uName">Create Username</string>
    <string name="create_new_password">Create New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="enter_dob">Enter Date-Of-Birth</string>
    <string name="enter_mobile_no">Mobile No</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="enter_location">Location</string>
    <string name="signup">Create My Account</string>

    <!--For Fragment Title & Others If Needed-->
    <string name="recent_chat">Recent</string>
    <string name="group_chat">Group</string>
    <string name="find_people">People</string>
    <string name="chat_settings">Settings</string>

    <!--Fragment Tollbar Text-->
    <string name="create_group">Create Group</string>
    <string name="search_people">Search People</string>
    <string name="delete_recent">Delete All</string>
    <string name="action_logout">Logout</string>

    <!--Settings ListView Array-->
    <array name="settings_list">
        <item>Privacy Policy</item>
        <item>Terms &amp; Conditions</item>
        <item>Logout</item>
    </array>

    <string name="title_activity_multi_login">MultiLoginActivity</string>

    <!--Integrating Third Party Account-->
    <string name="facebook_login_button_label">Log in with Facebook</string>
    <string name="twitter_login_button_label">Log in with Twitter</string>
    <string name="facebook_login_failed_toast">Facebook login failed</string>
    <string name="twitter_login_failed_toast">Twitter login failed</string>
    <string name="title_activity_start_chat">StartChat</string>
    <string name="title_activity_capture_from_camera">CaptureFromCamera</string>
    <string name="title_activity_create_new_group">CreateNewGroupActivity</string>
    <string name="title_activity_creating_new_group">CreatingNewGroup</string>
</resources>
